--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 <body>
 
     <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
+        <div class="grid-item one">
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+            <h1>hello</h1>
+        </div>
+        <div class="grid-item two">I'm</div>
+        <div class="grid-item three">Frontend</div>
+        <div class="grid-item four">Developer</div>
 
     </div>
 
-    <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-
-    </div>
 
 </body>
 
